--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,18 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "rules": {
-    }
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["airbnb-base"],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-plusplus": "off",
+    "no-console": "off",
+    "operator-linebreak": "off",
+    "import/extensions": "off",
+    "linebreak-style": ["error", "windows"]
+  }
 }
